<resources>
    <string name="app_name" translatable="false">Dried Seafood</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_search">Search</string>
    <string name="showresult_selected_image">INPUT PHOTO</string>
    <string name="showresult_predicted_fish">RESULT</string>
    <string name="enter_your_birthday_here">Enter your birthday</string>
    <string name="change_language">Change Language</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_account_register">Don\'t have account? REGISTER</string>
    <string name="forget_password">FORGET PASSWORD?</string>
    <string name="profile_image">Profile Image</string>
    <string name="dried_seafood">Dried SeaFood</string>
    <string name="information">Information</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="birthday">Birthday</string>
    <string name="update">Update</string>
    <string name="find_your_own_fish">Find your own Fish</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="make_this_your_favourite">Make this your favourite</string>
    <string name="dried_fish">Dried Fish</string>
    <string name="email_is_required">Email is required!</string>
    <string name="provide_valid_email">Provide valid email</string>
    <string name="check_your_email_to_reset_password">Check your email to reset your password</string>
    <string name="try_again">Try again!!!</string>
    <string name="please_enter_email">Please Enter Email!!</string>
    <string name="please_enter_password">Please Enter Password!!</string>
    <string name="login_successfully">Login Successfully!</string>
    <string name="you_havent_verify_your_account">You haven\'t verified your account!\nPlease check your email to verify your account!</string>
    <string name="cant_login">Can\'t Login!\nCheck your email or password</string>
    <string name="please_enter_your_name">Please enter your name!!</string>
    <string name="please_enter_your_birthday">Please enter your birthday!!</string>
    <string name="please_enter_your_email">Please enter your email!!</string>
    <string name="please_enter_valid_email">Please enter valid email!!</string>
    <string name="please_enter_your_password">Please enter your password!!</string>
    <string name="min_password_length_is_6">Min password length should be 6 characters</string>
    <string name="registered_successfully">Registered Successfully!\nPlease check your email to verify account before you log in!</string>
    <string name="failed_to_register">Failed to Register!</string>
    <string name="select_image">Select Image</string>
    <string name="unknown">Unknown</string>
    <string name="update_info_successfully">Update information successfully</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="favourite">Favourite</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="choose_language">Choose Language</string>
    <string name="logout">LogOut</string>
    <string name="search_bar">Search....</string>
    <string name="register">REGISTER</string>
    <string name="vietnamese" translatable="false">Tiếng Việt</string>
    <string name="crop">CROP</string>
    <string name="undo">UNDO</string>
    <string name="clear_history">Clear History</string>
    <string name="cleared_history_notification">Cleared viewed fishes history</string>
    <string name="back_to_previous_screen">Back to previous screen</string>
    <string name="ingredients">Ingredients:</string>
    <string name="instruction">Instruction:</string>
    <string name="failed_download_translation_model">Failed to download translation tools, please check your WIFI connection</string>
</resources>