<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_search_fragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_user_fragment"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_favorite_fragment"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_history_fragment"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/history" />
    </group>
    <item android:title="@string/settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_choose_language"
                    android:icon="@drawable/ic_baseline_translate_24"
                    android:title="@string/choose_language" />
                <item
                    android:id="@+id/nav_logout_fragment"
                    android:icon="@drawable/ic_baseline_logout_24"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
</menu>