<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MoreDetailActivity">

    <ImageButton
        android:id="@+id/more_detail_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:backgroundTint="@android:color/transparent"
        android:layout_gravity="start"
        android:contentDescription="@string/back_to_previous_screen" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/more_detail_recipe_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/image1"
        android:layout_marginTop="50dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/more_detail_recipe_name"
        android:text="recipe_name_here"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/more_detail_ingredients_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="24dp" />

    <TextView
        android:id="@+id/more_detail_ingredients_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:layout_marginStart="24dp"
        android:layout_weight="1"
        android:padding="24dp" />

    <TextView
        android:id="@+id/more_detail_instruction_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/instruction"
        android:textSize="30sp"
        android:paddingHorizontal="24dp"/>

    <TextView
        android:id="@+id/more_detail_instruction_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="24dp"
        android:layout_marginStart="24dp"
        android:scrollbars="vertical"
        android:layout_weight="2" />
</LinearLayout>